istio-service-mesh/resilience/reviews-advanced-destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: reviews
  namespace: default

spec:
  host: reviews

  trafficPolicy:

    loadBalancer:
      simple: LEAST_REQUEST

    connectionPool:

      tcp:
        maxConnections: 10

      http:
        http1MaxPendingRequests: 10
        http2MaxRequests: 20
        maxRequestsPerConnection: 2

    outlierDetection:
      consecutive5xxErrors: 3
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 100

  subsets:

  - name: v1
    labels:
      version: v1

  - name: v2
    labels:
      version: v2

  - name: v3
    labels:
      version: v3
