istio-service-mesh/resilience/reviews-fault-injection.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews
  namespace: default

spec:
  hosts:
  - reviews

  http:

  - match:
    - headers:
        end-user:
          exact: jason

    fault:

      delay:
        percentage:
          value: 50
        fixedDelay: 2s

      abort:
        percentage:
          value: 20
        httpStatus: 500

    route:
    - destination:
        host: reviews
        subset: v2

  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 50

    - destination:
        host: reviews
        subset: v3
      weight: 50
